@@ -26,9 +26,9 @@ channels[6007]="S13.0E-318-5000-13767";
 channelsnames[6008] = "SCT HQ (S)";
 channels[6008]="S13.0E-318-5000-13768";
 channelsnames[6009] = "Dorcel TV (S)";
-channels[6009]="S19.2E-53-1097-2045";
+channels[6009]="S19.2E-53-1119-12882";
 channelsnames[6010] = "Hustler TV (S)";
-channels[6010]="S19.2E-53-1097-2042";
+channels[6010]="S19.2E-53-1119-12883";
 channelsnames[6011] = "FRENCH LOVER (S)";
 channels[6011]="S19.2E-1-1018-6407";
 channelsnames[6012] = "LIBIDO TV (S)";
@@ -40,7 +40,7 @@ channels[6014]="S13.0E-318-8900-2099";
 channelsnames[6015] = "French Lover (S)";
 channels[6015]="S13.0E-318-8900-2098";
 channelsnames[6018] = "Hot (S)";
-channels[6018]="S30.0W-54-37-1666";
+channels[6018]="PS/S30.0W-54-37-1666.vob";
 channelsnames[6019] = "Leo TV (S)";
 channels[6019]="S23.5E-3-3209-13119";
 channelsnames[6020] = "Private Spice (S)";
@@ -83,7 +83,5 @@ channelsnames[6040] = "HUSTLER HD-3D (S)";
 channels[6040]="S13.0E-318-15800-16933";
 channelsnames[6041] = "DARING TV (S)";
 channels[6041]="S13.0E-318-15800-16931";
-channelsnames[6042] = "Penthouse HD. (S)"
-channels[6042] = "S23.5E-3-3202-6094"
 
-maxChan[6] = 6042; // set to max prt channel else you see 'undefined' in guide view
+maxChan[6] = 6041; // set to max prt channel else you see 'undefined' in guide view
